--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -71,7 +71,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ docker-image-name ]
     steps:
-      - run: echo '${{ toJSON(needs.docker-image-name.outputs) }}'
+      - run: echo '${{ toJSON(needs.docker-image-name.outputs) }}' | jq -c '.'
 
   create-docker-image-1:
     name: Create docker image
