--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -72,7 +72,7 @@ jobs:
     needs: [ docker-image-name ]
     steps:
       - run: echo '${{ toJSON(needs.docker-image-name.outputs) }}' | jq -c '.'
-      - run: jq -c '.' '${{ toJSON(needs.docker-image-name.outputs) }}'
+      - run: DOCKER_IMAGE=$('${{ toJSON(needs.docker-image-name.outputs) }}' | jq -c '.') && echo $DOCKER_IMAGE
 
   create-docker-image-1:
     name: Create docker image
