--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -70,21 +70,26 @@ jobs:
   convert-to-json:
     runs-on: ubuntu-latest
     needs: [ docker-image-name ]
+    outputs:
+      docker-image: ${{ steps.docker-image.outputs.docker-image }}
     steps:
       - run: echo '${{ toJSON(needs.docker-image-name.outputs) }}' | jq -c '.'
-      - run: DOCKER_IMAGE=$(echo '${{ toJSON(needs.docker-image-name.outputs) }}' | jq -c '.') && echo $DOCKER_IMAGE
+      - run: DOCKER_IMAGE=$(echo '${{ toJSON(needs.docker-image-name.outputs) }}' | jq -c '.') >> $GITHUB_ENV
+      - name: Docker image properties
+        id: docker-image
+        run: echo "DOCKER_IMAGE=$(echo '${{ toJSON(needs.docker-image-name.outputs) }}' | jq -c '.')" >> $GITHUB_OUTPUT
 
   create-docker-image-1:
     name: Create docker image
     needs:
       - config
       - build
-      - docker-image-name
+      - convert-to-json
     uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t16
     with:
       runner: 'ubuntu-latest'
       artifact-name: 'Package'
-      docker-image: ${{ needs.docker-image-name.outputs.docker-image }}
+      docker-image: ${{ needs.convert-to-json.outputs.docker-image }}
       container-registry: ${{ vars.CONTAINER_REGISTRY }}
     secrets:
       container-registry-password: ${{ secrets.DOCKER_HUB_PASSWORD }}
