--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -33,6 +33,8 @@ jobs:
   docker-image-specifications:
     name: image-specifications
     uses: digilinq/reusable-workflows/.github/workflows/docker-image-specifications.yaml@t17
+    with:
+      image: ${{ vars.PACKAGE_NAME }}
 
   create-docker-image-1:
     name: Create docker image
