--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -30,22 +30,30 @@ jobs:
       artifact-path: 'web/target/*.jar'
       docker-file: 'deployment/Dockerfile'
 
-  docker-image-specifications:
+  docker-container-registry:
     name: image-specifications
     uses: digilinq/reusable-workflows/.github/workflows/docker-image-specifications.yaml@t17
     with:
       image: ${{ vars.PACKAGE_NAME }}
+
+  docker-container-registry-test:
+    runs-on: ubuntu-latest
+    needs:
+      - docker-container-registry
+    steps:
+      - name: Print docker image name
+        run: echo ${{ needs.docker-container-registry.outputs.docker-image }}
 
   create-docker-image-1:
     name: Create docker image
     needs:
       - config
       - build
-      - docker-image-specifications
+      - docker-container-registry
     uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t16
     with:
       runner: 'ubuntu-latest'
-      docker-image: ${{ needs.docker-image-specifications.outputs.docker-image }}
+      docker-image: ${{ needs.docker-container-registry.outputs.docker-image }}
     secrets:
       container-registry-password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
