--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -34,6 +34,8 @@ jobs:
     name: image-specifications
     uses: digilinq/reusable-workflows/.github/workflows/docker-image-specifications.yaml@t18
     with:
+      registry: ${{ vars.CONTAINER_REGISTRY }}
+      owner: ${{ vars.DOCKER_HUB_USERNAME }}
       image: ${{ vars.PACKAGE_NAME }}
 
   docker-container-registry-test:
