--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -32,19 +32,11 @@ jobs:
 
   docker-container-registry:
     name: image-specifications
-    uses: digilinq/reusable-workflows/.github/workflows/docker-image-specifications.yaml@t18
+    uses: digilinq/reusable-workflows/.github/workflows/docker-image-specifications.yaml@t19
     with:
       registry: ${{ vars.CONTAINER_REGISTRY }}
       owner: ${{ vars.DOCKER_HUB_USERNAME }}
       image: ${{ vars.PACKAGE_NAME }}
-
-  docker-container-registry-test:
-    runs-on: ubuntu-latest
-    needs:
-      - docker-container-registry
-    steps:
-      - name: Print docker image name
-        run: echo ${{ needs.docker-container-registry.outputs.docker-image }}
 
   create-docker-image-1:
     name: Create docker image
@@ -55,7 +47,7 @@ jobs:
     uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t16
     with:
       runner: 'ubuntu-latest'
-      docker-image: ${{ needs.docker-container-registry.outputs.docker-image }}
+      docker-image: ${{ needs.docker-container-registry.outputs.specifications }}
     secrets:
       container-registry-password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
