--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -5,9 +5,9 @@ on:
     branches:
       - 'main'
       - 'feature/*'
-  pull_request:
-    branches:
-      - 'main'
+#  pull_request:
+#    branches:
+#      - 'main'
 env:
   REGISTRY: ${{ vars.CONTAINER_REGISTRY }}
   USERNAME: ${{ vars.DOCKER_HUB_USERNAME }}
@@ -15,13 +15,13 @@ env:
 
 jobs:
   config:
-    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t30
+    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t31
 
   build:
     name: build
     needs:
       - config
-    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t30
+    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t31
     with:
       runner: 'ubuntu-latest'
       ref: ${{ github.ref }}
@@ -33,7 +33,7 @@ jobs:
 
   docker-container-registry:
     name: image-specifications
-    uses: digilinq/reusable-workflows/.github/workflows/docker-image-specifications.yaml@t30
+    uses: digilinq/reusable-workflows/.github/workflows/docker-image-specifications.yaml@t31
     with:
       registry: ${{ vars.CONTAINER_REGISTRY }}
       owner: ${{ vars.DOCKER_HUB_USERNAME }}
@@ -45,7 +45,7 @@ jobs:
       - config
       - build
       - docker-container-registry
-    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t30
+    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t31
     with:
       runner: 'ubuntu-latest'
       artifact-name: 'Package'
