--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -15,13 +15,13 @@ env:
 
 jobs:
   config:
-    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t39
+    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t40
 
   build:
     name: build
     needs:
       - config
-    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t39
+    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t40
     with:
       runner: 'ubuntu-latest'
       ref: ${{ github.ref }}
@@ -33,7 +33,7 @@ jobs:
 
   docker-container-registry:
     name: image-specifications
-    uses: digilinq/reusable-workflows/.github/workflows/docker-image-specifications.yaml@t39
+    uses: digilinq/reusable-workflows/.github/workflows/docker-image-specifications.yaml@t40
     with:
       registry: ${{ vars.CONTAINER_REGISTRY }}
       owner: ${{ vars.DOCKER_HUB_USERNAME }}
@@ -45,11 +45,11 @@ jobs:
       - config
       - build
       - docker-container-registry
-    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t39
+    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t40
     with:
       runner: 'ubuntu-latest'
       artifact-name: 'Package'
-      docker-image: ${{ needs.docker-container-registry.outputs.json }}
+      docker-image: ${{ needs.docker-container-registry.outputs.docker }}
     secrets:
       container-registry-password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
