--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -56,10 +56,12 @@ jobs:
       container-registry-password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
   print-pushed-image:
+    runs-on: ubuntu-latest
     needs:
       - create-docker-image-1
-    name: Print pushed image
-    run: echo "The pushed image is ${{ needs.create-docker-image-1.outputs.docker-image }}"
+    steps:
+      - name: Print pushed image
+        run: echo "The pushed image is ${{ needs.create-docker-image-1.outputs.docker-image }}"
 
   create-docker-image:
     name: Create docker image
