--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -63,44 +63,44 @@ jobs:
       - name: Print pushed image
         run: echo "The pushed image is ${{ needs.create-docker-image-1.outputs.docker-image }}"
 
-  create-docker-image:
-    name: Create docker image
-    runs-on: 'ubuntu-latest'
-    needs:
-      - config
-      - build
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: Package
-      - name: Print event name
-        run: echo "The event name is ${{ github.event_name }}"
-      - name: Login to Container Registry
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ env.USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.PACKAGE }}
-          tags: |
-            type=semver,pattern={{version}},value=${{ inputs.version }}
-            type=semver,pattern={{major}}.{{minor}},value=${{ inputs.version }}
-            type=semver,pattern={{major}},value=${{ inputs.version }}
-            type=ref,event=branch,suffix=-{{ sha }}
-            type=ref,event=pr
-          flavor: |
-            latest=auto
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+#  create-docker-image:
+#    name: Create docker image
+#    runs-on: 'ubuntu-latest'
+#    needs:
+#      - config
+#      - build
+#    steps:
+#      - name: Download artifact
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: Package
+#      - name: Print event name
+#        run: echo "The event name is ${{ github.event_name }}"
+#      - name: Login to Container Registry
+#        if: github.event_name != 'pull_request'
+#        uses: docker/login-action@v3
+#        with:
+#          registry: ${{ env.REGISTRY }}
+#          username: ${{ env.USERNAME }}
+#          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+#      - name: Extract metadata (tags, labels) for Docker
+#        id: meta
+#        uses: docker/metadata-action@v5
+#        with:
+#          images: |
+#            ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.PACKAGE }}
+#          tags: |
+#            type=semver,pattern={{version}},value=${{ inputs.version }}
+#            type=semver,pattern={{major}}.{{minor}},value=${{ inputs.version }}
+#            type=semver,pattern={{major}},value=${{ inputs.version }}
+#            type=ref,event=branch,suffix=-{{ sha }}
+#            type=ref,event=pr
+#          flavor: |
+#            latest=auto
+#      - name: Build and push
+#        uses: docker/build-push-action@v5
+#        with:
+#          context: .
+#          push: ${{ github.event_name != 'pull_request' }}
+#          tags: ${{ steps.meta.outputs.tags }}
+#          labels: ${{ steps.meta.outputs.labels }}
