set kubernetes namespace

--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -15,13 +15,13 @@ env:
 
 jobs:
   config:
-    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t46
+    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t47
 
   build:
     name: build
     needs:
       - config
-    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t46
+    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t47
     with:
       runner: 'ubuntu-latest'
       ref: ${{ github.ref }}
@@ -33,7 +33,7 @@ jobs:
 
   docker-container-registry:
     name: image-specifications
-    uses: digilinq/reusable-workflows/.github/workflows/docker-image-specifications.yaml@t46
+    uses: digilinq/reusable-workflows/.github/workflows/docker-image-specifications.yaml@t47
     with:
       registry: ${{ vars.CONTAINER_REGISTRY }}
       namespace: ${{ vars.DOCKER_HUB_USERNAME }}
@@ -45,7 +45,7 @@ jobs:
       - config
       - build
       - docker-container-registry
-    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t46
+    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t47
     with:
       runner: 'ubuntu-latest'
       artifact-name: 'Package'
@@ -66,12 +66,12 @@ jobs:
     needs:
       - config
       - create-docker-image
-    uses: digilinq/reusable-workflows/.github/workflows/kubernetes-deploy.yaml@t46
+    uses: digilinq/reusable-workflows/.github/workflows/kubernetes-deploy.yaml@t47
     with:
       runner: 'ubuntu-latest'
       ref: ${{ github.ref }}
       image: ${{ needs.create-docker-image.outputs.docker-image }}
-      namespace: 'default'
+      namespace: 'tech-innovative'
     secrets:
       kubernetes-url: ${{ secrets.KUBERNETES_URL }}
       kubernetes-secret: ${{ secrets.KUBERNETES_SECRET }}
