--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - 'main'
-      - 'feature/*'
   pull_request:
     branches:
       - 'main'
@@ -15,13 +14,13 @@ env:
 
 jobs:
   config:
-    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t47
+    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@v2
 
   build:
     name: build
     needs:
       - config
-    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t47
+    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@v2
     with:
       runner: 'ubuntu-latest'
       ref: ${{ github.ref }}
@@ -33,7 +32,7 @@ jobs:
 
   docker-container-registry:
     name: image-specifications
-    uses: digilinq/reusable-workflows/.github/workflows/docker-image-specifications.yaml@t47
+    uses: digilinq/reusable-workflows/.github/workflows/docker-image-specifications.yaml@v2
     with:
       registry: ${{ vars.CONTAINER_REGISTRY }}
       namespace: ${{ vars.DOCKER_HUB_USERNAME }}
@@ -45,7 +44,7 @@ jobs:
       - config
       - build
       - docker-container-registry
-    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t47
+    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@v2
     with:
       runner: 'ubuntu-latest'
       artifact-name: 'Package'
@@ -58,7 +57,7 @@ jobs:
     needs:
       - config
       - create-docker-image
-    uses: digilinq/reusable-workflows/.github/workflows/kubernetes-deploy.yaml@t47
+    uses: digilinq/reusable-workflows/.github/workflows/kubernetes-deploy.yaml@v2
     with:
       runner: 'ubuntu-latest'
       ref: ${{ github.ref }}
