Add manifest parameter

--- a/.github/project-config.json
+++ b/.github/project-config.json
@@ -4,5 +4,11 @@
   },
   "maven": {
     "version": "3.6.3"
+  },
+  "github": {
+    "runner": "ubuntu-latest"
+  },
+  "deployment": {
+    "namespace": "commerce"
   }
 }
