Fix repository url

--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
             <repositories>
                 <repository>
                     <id>github</id>
-                    <url>https://maven.pkg.github.com/digilinq/uv</url>
+                    <url>https://maven.pkg.github.com/digilinq/users-service</url>
                     <snapshots>
                         <enabled>true</enabled>
                     </snapshots>
