--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: users
-          image: docker.io/digilinq/users-microservice
+          image: docker.io/lazycomputing/users
           env:
             - name: APP_VERSION
               value: "1.0.0"
