Change repository id to `eightbits`

--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
             </activation>
             <repositories>
                 <repository>
-                    <id>github</id>
+                    <id>eightbits</id>
                     <url>https://maven.pkg.github.com/digilinq/users-service</url>
                     <snapshots>
                         <enabled>true</enabled>
