--- a/web/src/main/resources/application-local.yaml
+++ b/web/src/main/resources/application-local.yaml
@@ -1,3 +1,11 @@
+logging:
+  level:
+    root: INFO
+    org.springframework.web: INFO
+    org.hibernate: WARN
+    com.zaxxer.hikari.HikariConfig: WARN
+    com.zaxxer.hikari: WARN
+
 spring:
   config:
     activate:
@@ -8,7 +16,7 @@ spring:
     password: NPXkk0xUTJCfnrAR
     driver-class-name: org.postgresql.Driver
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: create-drop
     properties:
