--- a/web/src/main/resources/application-prd.yaml
+++ b/web/src/main/resources/application-prd.yaml
@@ -1,3 +1,11 @@
+logging:
+  level:
+    root: INFO
+    org.springframework.web: INFO
+    org.hibernate: DEBUG
+    com.zaxxer.hikari.HikariConfig: DEBUG
+    com.zaxxer.hikari: TRACE
+
 spring:
   config:
     activate:
